[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/cannon.gd" type="Script" id=1]
[ext_resource path="res://assets/images/crosshair.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/cannonshot.ogg" type="AudioStream" id=3]
[ext_resource path="res://default_env.tres" type="Environment" id=5]
[ext_resource path="res://scripts/power_bar.gd" type="Script" id=6]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 1, 0, 1 )

[sub_resource type="CylinderMesh" id=2]
material = SubResource( 1 )
top_radius = 0.5
height = 1.0

[sub_resource type="CylinderShape" id=3]
height = 1.0

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 1, 0, 1 )

[sub_resource type="CylinderMesh" id=5]
material = SubResource( 4 )
top_radius = 0.4
bottom_radius = 0.3

[sub_resource type="SphereMesh" id=6]
radius = 0.2
height = 0.4

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0.0413534, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.996241, 0.0738636 ), 0.0, 0.0, 0, 0 ]

[node name="cannon" type="RigidBody"]
collision_layer = 3
collision_mask = 3
mass = 5.0
script = ExtResource( 1 )

[node name="power_bar" type="Polygon2D" parent="."]
visible = false
position = Vector2( 0, 100 )
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 0, 500, 100, 500, 100, 0 )
script = ExtResource( 6 )

[node name="current_power" type="Polygon2D" parent="power_bar"]
color = Color( 0, 1, 0, 1 )

[node name="mesh" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="shape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="switch" type="Button" parent="."]
visible = false
margin_right = 100.0
margin_bottom = 100.0
text = "Switch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="horizontal_pivot" type="Spatial" parent="."]

[node name="vertical_pivot" type="Spatial" parent="horizontal_pivot"]

[node name="barrel" type="MeshInstance" parent="horizontal_pivot/vertical_pivot"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, -0.5 )
mesh = SubResource( 5 )
material/0 = null

[node name="Camera" type="Camera" parent="horizontal_pivot/vertical_pivot/barrel"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0.585434, -0.89098 )
environment = ExtResource( 5 )
far = 250.0

[node name="muzzle" type="Spatial" parent="horizontal_pivot/vertical_pivot/barrel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.3, 0 )

[node name="aimcast" type="RayCast" parent="horizontal_pivot/vertical_pivot/barrel/muzzle"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -500 )

[node name="crosshair" type="TextureRect" parent="horizontal_pivot/vertical_pivot/barrel/muzzle"]
visible = false
margin_left = 492.0
margin_top = 280.0
margin_right = 532.0
margin_bottom = 320.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="explosion" type="CPUParticles" parent="horizontal_pivot/vertical_pivot/barrel/muzzle"]
transform = Transform( 1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, -0.00238562, 0.252212, -0.0190097 )
emitting = false
amount = 50
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
mesh = SubResource( 6 )
direction = Vector3( 0, 1, 0 )
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
scale_amount_curve = SubResource( 7 )

[node name="cannonshot" type="AudioStreamPlayer3D" parent="horizontal_pivot/vertical_pivot/barrel/muzzle"]
stream = ExtResource( 3 )

[connection signal="pressed" from="switch" to="." method="_on_switch_pressed"]
